fix update category
